objects/Origination_Documentation__c.object
<CustomObject>
    <fields>
        <fullName>Absorption_Trends__c</fullName>
        <label>Absorption Trends</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Accordion_Option__c</fullName>
        <label>Accordion Option</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advance_Rate_s_Standard_Language__c</fullName>
        <label>Advance Rate(s), Standard Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advance_Rate_s__c</fullName>
        <label>Advance Rate(s)</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Advance_on_Appraised_Value__c</fullName>
        <label>% Advance on Appraised Value</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advance_on_Global_Loan_Amount__c</fullName>
        <label>% Advance on Global Loan Amount</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appraisal_Diligence_Requirements__c</fullName>
        <description>Lender Finance only</description>
        <label>Appraisal/Diligence Requirements</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Appraisal_Summary_Highlights__c</fullName>
        <label>Appraisal Summary/Highlights</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>As_Complete_Prospective_Valuation__c</fullName>
        <label>As-Complete/Prospective Valuation</label>
        <length>7500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>As_Complete_Value__c</fullName>
        <label>As-Complete Value</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>As_Is_Value__c</fullName>
        <label>As-Is Value</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Background_Check_Findings__c</fullName>
        <label>Background Check Findings</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Background_Experience_General_Other__c</fullName>
        <label>Background &amp; Experience - General/Other</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Background_Experience__c</fullName>
        <label>Background &amp; Experience</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <label>Background</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Balance_Sheet_Analysis__c</fullName>
        <label>Balance Sheet Analysis</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Base_Case_Static_Wind_Down__c</fullName>
        <label>Base Case Static Wind-Down</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Basic_Collateral_Summary__c</fullName>
        <label>Basic Collateral Summary</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BofI_Accordion_Option__c</fullName>
        <label>BofI Accordion Option</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BofI_Appraisal_Review__c</fullName>
        <label>BofI Appraisal Review</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BofI_Appraisal__c</fullName>
        <label>BofI Appraisal</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BofI_Borrower_General_Other__c</fullName>
        <label>BofI/Borrower - General/Other</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BofI_Closing_Fee_Percent__c</fullName>
        <label>BofI Closing Fee %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BofI_Closing_Fee__c</fullName>
        <label>BofI Closing Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BofI_Collateral_Analysis_Other__c</fullName>
        <label>BofI Collateral Analysis - Other</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BofI_Conditions_Precedent_to_Closing__c</fullName>
        <label>BofI Conditions Precedent to Closing</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BofI_Conditions_of_Extension__c</fullName>
        <label>BofI Conditions of Extension</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BofI_Covenants__c</fullName>
        <label>BofI Covenants</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BofI_Deal_Team__c</fullName>
        <label>BofI Deal Team</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BofI_Exit_Fee__c</fullName>
        <label>BofI Exit Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BofI_Extension_Option_s__c</fullName>
        <label>BofI Extension Option(s)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BofI_Interest_Reserve__c</fullName>
        <label>BofI Interest Reserve</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BofI_Key_Participation_Terms__c</fullName>
        <label>BofI Key Participation Terms</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BofI_Loan_Amount__c</fullName>
        <label>BofI Loan Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BofI_Other_Credit_Enhancements__c</fullName>
        <label>BofI Other Credit Enhancements</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BofI_Other_Fees__c</fullName>
        <label>BofI Other Fees</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BofI_Outside_Counsel__c</fullName>
        <label>BofI Outside Counsel</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BofI_Payment_Description__c</fullName>
        <label>BofI Payment Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BofI_Payment__c</fullName>
        <label>BofI Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interest Only</fullName>
                </value>
                <value>
                    <fullName>Interest Only with Release Prices</fullName>
                </value>
                <value>
                    <fullName>Amortizing (P&amp;I)</fullName>
                </value>
                <value>
                    <fullName>Fixed Principal plus Interest (P+I)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BofI_Post_Funding_Conditions__c</fullName>
        <label>BofI Post-Funding Conditions</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BofI_Primary_Exits__c</fullName>
        <label>BofI Primary Exits</label>
        <length>1500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BofI_Rate_Description__c</fullName>
        <label>BofI Rate Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BofI_Rate__c</fullName>
        <label>BofI Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BofI_Sources_Uses__c</fullName>
        <label>BofI Sources &amp; Uses</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BofI_Term__c</fullName>
        <label>BofI Term</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BofI_Use_of_Proceeds__c</fullName>
        <label>BofI Use of Proceeds</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bofi_Exit_Fee_Percent__c</fullName>
        <label>BofI Exit Fee %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Borrower_Business_Strategy__c</fullName>
        <label>Borrower Business Strategy</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Borrower_Counsel__c</fullName>
        <label>Borrower Counsel</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Borrower_Legal_Name__c</fullName>
        <formula>Opportunity_Name__r.CI_Borrower_Legal_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Borrower Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower_Org_Chart_Vesting_Tree__c</fullName>
        <label>Borrower Org Chart / Vesting Tree</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Borrower_Product_Descriptions_Details__c</fullName>
        <label>Borrower Product Descriptions/Details</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Borrower_Scorecard__c</fullName>
        <label>Borrower Scorecard</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Borrower_Sponsor__c</fullName>
        <label>Borrower/Sponsor</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Borrower_Standard_Language__c</fullName>
        <label>Borrower, Standard Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Borrower_Strategy_Feasibility_Analysis__c</fullName>
        <label>Borrower Strategy Feasibility Analysis</label>
        <length>7500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Borrowing_Entity_Background__c</fullName>
        <label>Borrowing Entity Background</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Borrowing_Entity_General_Other__c</fullName>
        <label>General/Other BE</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Strategy_Portfolio_Overview__c</fullName>
        <label>Business Strategy &amp; Portfolio Overview</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CAM_1st_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAM - 1st Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM_2nd_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field was used as part of the 3-step approval process for CAM.  The third step was removed, so this field (and corresponding field updates) is a candidate for removal.</description>
        <label>CAM - 2nd Approval [OLD]</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM_Approval__c</fullName>
        <label>CAM Approval</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAM_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAM Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM_C_I_Signer_1_Title__c</fullName>
        <formula>CAM_C_I_Signer_1__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM C&amp;I Signer 1 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_C_I_Signer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAM C&amp;I Signer 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>C&amp;I</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Origination_Documentation1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAM_C_I_Signer_2_Title__c</fullName>
        <formula>CAM_C_I_Signer_2__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM C&amp;I Signer 2 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_C_I_Signer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAM C&amp;I Signer 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>C&amp;I</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Origination_Documentation2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAM_C_I_Signer_3_Title__c</fullName>
        <formula>CAM_C_I_Signer_3__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM C&amp;I Signer 3 Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_C_I_Signer_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAM C&amp;I Signer 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>C&amp;I</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Origination_Documentation3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAM_Fields_Populated_AB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAM Fields Populated - AB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM_Fields_Populated_ALL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAM Fields Populated - ALL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM_Fields_Populated_BRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAM Fields Populated - BRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM_Fields_Populated_GENeral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAM Fields Populated - GEN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM_Fields_Populated_LF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAM Fields Populated - LF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CI_Rate_Description__c</fullName>
        <formula>IF(
  ISBLANK(Opportunity_Name__r.CI_Rate__c), 
  IF(
    OR(
      ISPICKVAL(Opportunity_Name__r.CI_Rate_Type__c, &quot;&quot;),
      ISBLANK(Opportunity_Name__r.CI_Rate_Floor__c)
    ),
    &quot;&quot;,
    TEXT(Opportunity_Name__r.CI_Rate_Type__c) + &quot; or &quot; + TEXT(Opportunity_Name__r.CI_Rate_Floor__c*100) + &quot;%&quot;
  ),
  IF(
    ISPICKVAL(Opportunity_Name__r.CI_Rate_Type__c, &quot;Fixed&quot;),
    IF(
      ISBLANK(Opportunity_Name__r.CI_Rate_Floor__c),
      TEXT(Opportunity_Name__r.CI_Rate__c*100) + &quot;% Fixed&quot;,
      TEXT(Opportunity_Name__r.CI_Rate__c*100) + &quot;% Fixed or &quot; + TEXT(Opportunity_Name__r.CI_Rate_Floor__c*100) + &quot;%&quot;
    ),
    IF(
      ISPICKVAL(Opportunity_Name__r.CI_Rate_Type__c, &quot;&quot;),
      TEXT(Opportunity_Name__r.CI_Rate__c*100) + &quot;%&quot;,
      TEXT(Opportunity_Name__r.CI_Rate__c*100) + &quot;% + &quot; + TEXT(Opportunity_Name__r.CI_Rate_Type__c) +&quot; or &quot;+ TEXT (Opportunity_Name__r.CI_Rate_Floor__c*100)+&quot;%&quot;
    )
  )
)</formula>
        <label>Rate Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Rate__c</fullName>
        <description>Populates &apos;Rate&apos; on Origination Documentation.</description>
        <formula>TEXT(Opportunity_Name__r.CI_Rate__c *100)+ &quot;%&quot;</formula>
        <label>Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Dominion__c</fullName>
        <label>Cash Dominion</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Analysis__c</fullName>
        <label>Cash Flow Analysis</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Diagram__c</fullName>
        <label>Cash Flow Diagram</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Waterfall__c</fullName>
        <label>Cash Flow Waterfall</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Closing_Fee__c</fullName>
        <label>Closing Fee %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Closing_Fee_s__c</fullName>
        <label>Closing Fee(s)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collateral_Address_City__c</fullName>
        <label>Collateral Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Address_State__c</fullName>
        <label>Collateral Address State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Address_Street__c</fullName>
        <label>Collateral Address Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Address_Zip_Postal_Code__c</fullName>
        <label>Collateral Address Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Analysis_General_Other__c</fullName>
        <label>Collateral Analysis - General/Other</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Collateral_Analysis__c</fullName>
        <label>Collateral Analysis</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Collateral_Custodian__c</fullName>
        <label>Collateral Custodian</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Collateral_Description__c</fullName>
        <label>Collateral Description</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Collateral_Diversity__c</fullName>
        <label>Collateral Diversity</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Collateral_Standard_Language__c</fullName>
        <label>Collateral, Standard Language</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <label>Collateral</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Collection_Account__c</fullName>
        <label>Collection Account</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Background__c</fullName>
        <description>Lender Finance only</description>
        <label>Company Background</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Opportunity_Name__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions_Precedent_to_Closing__c</fullName>
        <label>Conditions Precedent to Closing</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conditions_of_Extension__c</fullName>
        <label>Conditions of Extension</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Company__c</fullName>
        <formula>Contact_Name__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Origination Documentation</relationshipLabel>
        <relationshipName>Origination_Documentation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Legal_Loan_Diagrams__c</fullName>
        <label>Corporate/Legal/Loan Diagrams</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Corporate_Org_Chart__c</fullName>
        <label>Corporate Org Chart</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Covenant_Monitoring_Reporting__c</fullName>
        <label>Covenant Monitoring &amp; Reporting</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Covenants__c</fullName>
        <label>Covenants</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Credit_Report_Findings__c</fullName>
        <label>Credit Report Findings</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Current_Volumes_Performance_Metrics__c</fullName>
        <label>Current Volumes, Performance, &amp; Metrics</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deal_Specific_Operations__c</fullName>
        <label>Deal-Specific Operations</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deal_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Sponsor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Origination Documentation (Deal Sponsor)</relationshipLabel>
        <relationshipName>Origination_Documentation1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Strengths__c</fullName>
        <label>Deal Strengths</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deal_Thesis__c</fullName>
        <label>Deal Thesis</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Default_Rate_of_Interest__c</fullName>
        <label>Default Rate of Interest</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description_of_Parties_Involved__c</fullName>
        <label>Description of Parties Involved</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Detailed_Collateral_Description__c</fullName>
        <label>Detailed Collateral Description</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Draw_Requests__c</fullName>
        <label>Draw Requests</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Deposit__c</fullName>
        <label>Due Diligence Deposit</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Diligence__c</fullName>
        <label>Due Diligence</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Economic_Conditions__c</fullName>
        <label>Economic Conditions</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Eligibility_Criteria_Standard_Language__c</fullName>
        <label>Eligibility Criteria, Standard Language</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility_Criteria__c</fullName>
        <label>Eligibility Criteria</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Entity_Structure_and_Other_Assets_Held__c</fullName>
        <label>Entity Structure and Other Assets Held</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Events_of_Default__c</fullName>
        <label>Events of Default</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <label>Executive Summary</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Existing_Client__c</fullName>
        <formula>TEXT( Opportunity_Name__r.CI_Existing_Client__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Fee__c</fullName>
        <label>Exit Fee %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exit_Fee_s__c</fullName>
        <description>Bridge only</description>
        <label>Exit Fee(s)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exit_Strategies__c</fullName>
        <label>Exit Strategies</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exit_Strategy_1__c</fullName>
        <label>Exit Strategy 1</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exit_Strategy_2__c</fullName>
        <label>Exit Strategy 2</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exit_Strategy_3__c</fullName>
        <label>Exit Strategy 3</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exit_Strategy_Feasibility_Analysis__c</fullName>
        <label>Exit Strategy Feasibility Analysis</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Option_s__c</fullName>
        <label>Extension Option(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feasibility_Analysis_1__c</fullName>
        <label>Feasibility Analysis 1</label>
        <length>3500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Feasibility_Analysis_2__c</fullName>
        <label>Feasibility Analysis 2</label>
        <length>3500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Feasibility_Analysis_3__c</fullName>
        <label>Feasibility Analysis 3</label>
        <length>3500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Financial_Analysis_General_Other__c</fullName>
        <label>Financial Analysis - General/Other</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Financial_Analysis__c</fullName>
        <label>Financial Analysis</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Financial_Portfolio_Analysis__c</fullName>
        <label>Financial &amp; Portfolio Analysis</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Financial_Reporting_Requirements__c</fullName>
        <label>Financial Reporting Requirements</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Foreign_Offshore_Entities_20_Found__c</fullName>
        <inlineHelpText>If Foreign Offshore Entities, were beneficial owners (20%+) identified?</inlineHelpText>
        <label>Foreign Offshore Entities - 20%+ Found?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Other__c</fullName>
        <label>General/Other</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Global_Loan_Amount__c</fullName>
        <label>Global Loan Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_Sources_Uses__c</fullName>
        <label>Global Sources &amp; Uses</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Guarantor_Type_s__c</fullName>
        <label>Guarantor Type(s)</label>
        <length>1500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Guarantor_s_Background__c</fullName>
        <label>Guarantor(s) Background</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Guarantor_s__c</fullName>
        <label>Guarantor(s)</label>
        <length>1500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Guarantors_General_Other__c</fullName>
        <label>Guarantors - General/Other</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Guideline_Exceptions__c</fullName>
        <label>Guideline Exceptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Historic_Volumes_Performance_Metrics__c</fullName>
        <label>Historic Volumes, Performance, &amp; Metrics</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>If_Foreign_Nationals_NRA_approved_by_BS__c</fullName>
        <inlineHelpText>If Foreign Nationals/NRA, approved by BSA Compliance</inlineHelpText>
        <label>Foreign Nationals/NRA, BSA Approval?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Match_cleared_by_BSA_Compliance__c</fullName>
        <label>If Match, cleared by BSA Compliance?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Statement_Analysis__c</fullName>
        <label>Income Statement Analysis</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Industry_Market__c</fullName>
        <label>Industry/Market</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Standard_Language__c</fullName>
        <label>Interest Rate, Standard Language</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interest_Reserve__c</fullName>
        <label>Interest Reserve</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Junior_Participant_General_Other__c</fullName>
        <label>Junior Participant - General/Other</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Junior_Participant_Release_Event__c</fullName>
        <label>Junior Participant Release Event</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Principals__c</fullName>
        <label>Key Principals</label>
        <length>7500</length>
        <type>Html</type>
    </fields>
</CustomObject>